# staf

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  UPDATES.md  example.output.json  example.prompt.txt  package-lock.json  package.json  updater.json  updater.json.example  vite.config.ts
.github/workflows/: ci.yml  release.yml
app/: app.css  root.tsx  types.ts
app/components/: CsvPreview.tsx  CsvUploader.tsx  ExportDialog.tsx  OutputColumnEditor.tsx  ProcessControl.tsx  PromptEditor.tsx  ResultViewer.tsx  SettingsDialog.tsx  TemplateManager.tsx  ToastProvider.tsx  UpdateChecker.tsx
app/components/ui/: progress.tsx
app/hooks/: useGeminiProcessor.ts
app/routes/: home.tsx
app/stores/: appStore.ts  configStore.ts
app/types/: index.ts
app/utils/: csvExporter.ts  geminiClient.ts  logger.ts  parallel.ts  rateLimiter.ts  startup.ts
doc/: staf-intro.md
examples/: example.input.csv  example.output.json  example.prompt.txt
scripts/: sync-version.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: gemini.rs  lib.rs  processor.rs
