[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.1", features = [] }
tauri-plugin-log = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-updater = "2.0"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", features = ["json", "http2", "rustls-tls"] }
governor = { version = "0.6" }
tokio-util = { version = "0.7", features = ["rt"] }
thiserror = "1.0"
anyhow = "1.0"
regex = "1.11"
once_cell = "1.19"
gemini-rust = "1.5.1"
